😇 workflow_dispatch で引数指定できるように修正

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,6 +3,10 @@ run-name: Test
 on:
   pull_request:
   workflow_dispatch:
+    inputs:
+      message:
+        description: Message for the pull request
+        required: true
 defaults:
   run:
     shell: bash
