--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,4 +41,4 @@ jobs:
           test "$(gh pr view "${{ steps.exercise.outputs.branch }}" --json title -q .title)" = "${MESSAGE}"
       - id: teardown
         if: always()
-        run: gh pr close "${{ github.head_ref }}" -d || true
+        run: gh pr close "${{ steps.exercise.outputs.branch }}" -d || true
