--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,6 +36,8 @@ jobs:
         with:
           message: ${MESSAGE}
       - id: verify
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
           set -x
           test "$(gh pr view "${{ steps.exercise.outputs.branch }}" --json title -q .title)" = "${MESSAGE}"
